修复data/tools路径引用错误导致的部署问题

--- a/src/config/locale/messages/en/pages/ai-style.json
+++ b/src/config/locale/messages/en/pages/ai-style.json
@@ -23,6 +23,7 @@
     "searchPlaceholder": "Search effects...",
     "effectsCount": "{count} effects",
     "noEffects": "No effects available",
-    "noResultsFound": "No effects found for \"{query}\""
+    "noResultsFound": "No effects found for \"{query}\"",
+    "usageCount": "{count} uses"
   }
 }
