--- a/src/config/locale/messages/en/pages/ai-style.json
+++ b/src/config/locale/messages/en/pages/ai-style.json
@@ -16,6 +16,45 @@
         "description": "Choose from our extensive collection of viral AI photo and video effects.",
         "photo_effects_key": "pages.photo-effects",
         "video_effects_key": "pages.video-effects"
+      },
+      "how_to": {
+        "title": "How to Use AI Style Effects",
+        "description": "Create stunning AI photos and videos in 3 simple steps.",
+        "steps": [
+          {
+            "title": "Choose an Effect",
+            "description": "Browse our library of trending AI photo and video effects. Select the one that matches your creative vision."
+          },
+          {
+            "title": "Upload Your Photo or Video",
+            "description": "Upload a clear photo or video. For best results, ensure the subject is well-lit and clearly visible."
+          },
+          {
+            "title": "Generate & Share",
+            "description": "Click generate and watch the AI magic happen. Download your creation and share it with friends or on social media!"
+          }
+        ]
+      },
+      "faq": {
+        "title": "Frequently Asked Questions",
+        "items": [
+          {
+            "question": "Is it free to use?",
+            "answer": "We offer free trials for new users to experience our AI effects. For unlimited access and faster generation speeds, you can upgrade to our premium plan."
+          },
+          {
+            "question": "How long does it take to generate?",
+            "answer": "Photo effects usually take 10-20 seconds. Video effects may take slightly longer, typically 1-2 minutes depending on the video length and complexity."
+          },
+          {
+            "question": "Can I use the generated images/videos for commercial purposes?",
+            "answer": "Yes, if you are a subscribed member, you have full commercial rights to the content you generate using our platform."
+          },
+          {
+            "question": "What file formats are supported?",
+            "answer": "We support common image formats like JPG, PNG, and video formats like MP4, MOV. The maximum file size is 20MB for images and 100MB for videos."
+          }
+        ]
       }
     }
   },
