--- a/src/config/locale/messages/zh/landing.json
+++ b/src/config/locale/messages/zh/landing.json
@@ -106,19 +106,113 @@
           ]
         },
         {
-          "title": "视频特效",
-          "url": "/video-effects",
-          "icon": "Video"
+          "title": "特效",
+          "icon": "Magic",
+          "children": [
+            {
+              "title": "视频特效",
+              "description": "AI驱动的视频特效",
+              "icon": "Video",
+              "children": [
+                {
+                  "title": "AI拥抱",
+                  "description": "创建温暖拥抱视频",
+                  "url": "/video-effects/ai-hug",
+                  "icon": "Heart"
+                },
+                {
+                  "title": "AI接吻",
+                  "description": "创建接吻视频",
+                  "url": "/video-effects/ai-kissing",
+                  "icon": "Heart"
+                },
+                {
+                  "title": "AI跳舞",
+                  "description": "让照片跳舞",
+                  "url": "/video-effects/ai-dance",
+                  "icon": "Music"
+                },
+                {
+                  "title": "AI模仿",
+                  "description": "模仿舞蹈动作",
+                  "url": "/video-effects/ai-mimic",
+                  "icon": "Activity"
+                },
+                {
+                  "title": "角色切换",
+                  "description": "视频角色与场景切换",
+                  "url": "/video-effects/ai-role-swap",
+                  "icon": "Users"
+                },
+                {
+                  "title": "查看更多",
+                  "description": "探索所有视频特效",
+                  "url": "/video-effects",
+                  "icon": "ArrowRight"
+                }
+              ]
+            },
+            {
+              "title": "照片特效",
+              "description": "AI驱动的照片特效",
+              "icon": "Image",
+              "children": [
+                {
+                  "title": "AI虚拟约会",
+                  "description": "浪漫约会照片",
+                  "url": "/photo-effects/ai-fake-date",
+                  "icon": "Coffee"
+                },
+                {
+                  "title": "AI怀孕",
+                  "description": "美丽的孕照",
+                  "url": "/photo-effects/ai-pregnant-photo",
+                  "icon": "Baby"
+                },
+                {
+                  "title": "名人自拍",
+                  "description": "与名人自拍",
+                  "url": "/photo-effects/ai-celebrity-selfie",
+                  "icon": "Camera"
+                },
+                {
+                  "title": "艺术风格",
+                  "description": "创意艺术特效",
+                  "url": "/photo-effects/art-style",
+                  "icon": "Palette"
+                },
+                {
+                  "title": "视觉特效",
+                  "description": "创意照片特效",
+                  "url": "/photo-effects/ai-visual-effects-photo",
+                  "icon": "Zap"
+                },
+                {
+                  "title": "查看更多",
+                  "description": "探索所有照片特效",
+                  "url": "/photo-effects",
+                  "icon": "ArrowRight"
+                }
+              ]
+            }
+          ]
         },
+
         {
-          "title": "照片特效",
-          "url": "/photo-effects",
-          "icon": "Image"
-        },
-        {
-          "title": "API 平台",
-          "url": "/api-platform",
-          "icon": "Code"
+          "title": "AI",
+          "icon": "Sparkles",
+          "children": [
+            {
+              "title": "AI IMAGE",
+              "url": "/text-to-image",
+              "icon": "Image"
+            },
+            {
+              "title": "AI VIDEO",
+              "url": "/text-to-video",
+              "icon": "Video"
+            }
+          ]
         },
         {
           "title": "价格",
