--- a/src/config/locale/messages/zh/pages/index.json
+++ b/src/config/locale/messages/zh/pages/index.json
@@ -2,11 +2,12 @@
   "page": {
     "show_sections": [
       "hero",
+      "showcases",
       "introduce",
       "features",
+      "tools_grid",
       "effects",
-      "creations",
-      "cta",
+      "stats",
       "faq"
     ],
     "sections": {
@@ -20,43 +21,6 @@
           "title": "🎉 享受限时 50% 优惠！",
           "url": "/pricing"
         },
-        "tip": "",
-        "input_placeholder": "输入您的想法进行生成",
-        "tools": [
-          {
-            "id": "video",
-            "icon": "RiVideoLine",
-            "label": "AI 视频"
-          },
-          {
-            "id": "text-to-video",
-            "icon": "RiFileTextLine",
-            "label": "文字/图片转视频"
-          },
-          {
-            "id": "pollo-2",
-            "icon": "RiFlashlightLine",
-            "label": "Pollo 2.5"
-          }
-        ],
-        "examples": [
-          {
-            "emoji": "👑",
-            "text": "加冕"
-          },
-          {
-            "emoji": "🌬️",
-            "text": "随风而逝"
-          },
-          {
-            "emoji": "🧱",
-            "text": "游戏屋建造者"
-          }
-        ],
-        "show_avatars": false,
-        "show_award": false,
-        "image": {},
-        "image_invert": {},
         "background_image": {
           "src": "/imgs/bg/tree.jpg",
           "alt": "hero 背景"
@@ -78,46 +42,13 @@
           ]
         }
       },
-      "logos": {
-        "id": "logos",
-        "title": "助力来自顶尖公司的创作者",
-        "items": [
-          {
-            "title": "Next.js",
-            "image": {
-              "src": "/imgs/logos/nextjs.svg",
-              "alt": "Next.js"
-            }
-          },
-          {
-            "title": "React",
-            "image": {
-              "src": "/imgs/logos/react.svg",
-              "alt": "React"
-            }
-          },
-          {
-            "title": "TailwindCSS",
-            "image": {
-              "src": "/imgs/logos/tailwindcss.svg",
-              "alt": "TailwindCSS"
-            }
-          },
-          {
-            "title": "Vercel",
-            "image": {
-              "src": "/imgs/logos/vercel.svg",
-              "alt": "Vercel"
-            }
-          }
-        ]
-      },
+
       "introduce": {
         "block": "models-section",
         "id": "models-showcase",
         "title": "10 秒生成 AI 照片",
         "description": "1PhotoAI 是一款 AI 照片生成器，只需 10 秒即可提供专业的高质量职业照。从增强您的职业社交网络资料，到生成独特的社交媒体头像或动漫图像。",
-        "input_placeholder": "输入您的想法进行生成",
+
         "items": [
           {
             "id": "video-generators",
@@ -559,144 +490,36 @@
         "button_text": "立即使用",
         "view_more": "查看更多"
       },
-      "creations": {
-        "block": "creations-section",
-        "id": "creations",
-        "title": "探索 1PhotoAI 用户作品",
-        "tabs": [
-          {
-            "id": "all",
-            "label": "全部"
-          },
-          {
-            "id": "videos",
-            "label": "视频"
-          },
-          {
-            "id": "effects",
-            "label": "AI 特效"
-          },
-          {
-            "id": "avatars",
-            "label": "头像"
-          },
-          {
-            "id": "images",
-            "label": "图片"
-          },
-          {
-            "id": "loras",
-            "label": "LoRAs"
-          },
-          {
-            "id": "shorts",
-            "label": "短视频"
-          }
+      "tools_grid": {
+        "block": "tools-grid",
+        "id": "tools-grid",
+        "title": "1Photo AI 提供的 14+ 款强大图像编辑工具",
+        "description": "探索我们需要增强您的照片和视频的强大 AI 工具套件。",
+        "view_more_url": "/tools?type=video",
+        "video_items": [
+            { "title": "文字转视频", "url": "/text-to-video", "image": "/img_video/imgs/AI-Kissing_正常接吻_1.png", "hover_image": "/img_video/imgs/AI-Kissing_正常接吻_2.png" },
+            { "title": "图片转视频", "url": "/image-to-video", "image": "/img_video/imgs/Muscle_肌肉展示_1.png", "hover_image": "/img_video/imgs/Muscle_肌肉展示_2.png" },
+            { "title": "视频增强", "url": "/video-enhancer", "image": "/img_video/imgs/AI-Dance-Generator_肚皮舞_1.png", "hover_image": "/img_video/imgs/AI-Dance-Generator_肚皮舞_2.png" },
+            { "title": "AI 拥抱视频", "url": "/video-effects/ai-hug", "image": "/img_video/imgs/Hug_侧身依抱_1.png", "hover_image": "/img_video/imgs/Hug_侧身依抱_2.png" },
+            { "title": "AI 接吻视频", "url": "/video-effects/ai-kissing", "image": "/img_video/imgs/AI-Kissing_法式接吻_1.png", "hover_image": "/img_video/imgs/AI-Kissing_法式接吻_2.png" }
         ],
-        "items": [
-          {
-            "image": {
-              "src": "/imgs/cms/AI-Fake-Date_俄罗斯女友_1.png",
-              "alt": "作品 1"
-            },
-            "user": "用户 1"
-          },
-          {
-            "image": {
-              "src": "/imgs/cms/Hug_公主抱_1.png",
-              "alt": "作品 2"
-            },
-            "user": "用户 2"
-          },
-          {
-            "image": {
-              "src": "/imgs/cms/AI-Selfie-with-Celebrities_名人合拍_1.png",
-              "alt": "作品 3"
-            },
-            "user": "用户 3"
-          },
-          {
-            "image": {
-              "src": "/imgs/cms/AI-Kissing_正常接吻_1.png",
-              "alt": "作品 4"
-            },
-            "type": "video",
-            "user": "用户 4"
-          },
-          {
-            "image": {
-              "src": "/imgs/cms/Jiggle_抖动身体_1.png",
-              "alt": "作品 5"
-            },
-            "type": "video",
-            "user": "用户 5"
-          },
-          {
-            "image": {
-              "src": "/imgs/cms/Muscle_肌肉展示_1.png",
-              "alt": "作品 6"
-            },
-            "user": "用户 6"
-          },
-          {
-            "image": {
-              "src": "/imgs/cms/Twerk_扭臀舞_1.png",
-              "alt": "作品 7"
-            },
-            "type": "video",
-            "user": "用户 7"
-          },
-          {
-            "image": {
-              "src": "/imgs/cms/Pregnant-AI_进入嘴巴_1.png",
-              "alt": "作品 8"
-            },
-            "user": "用户 8"
-          },
-          {
-            "image": {
-              "src": "/imgs/cms/Hug_侧身依抱_1.png",
-              "alt": "作品 9"
-            },
-            "user": "用户 9"
-          },
-          {
-            "image": {
-              "src": "/imgs/cms/AI-Fake-Date_中国女友_1.png",
-              "alt": "作品 10"
-            },
-            "user": "用户 10"
-          },
-          {
-            "image": {
-              "src": "/imgs/cms/AI-Fake-Date_法国女友_1.png",
-              "alt": "作品 11"
-            },
-            "user": "用户 11"
-          },
-          {
-            "image": {
-              "src": "/imgs/cms/AI-Kissing_脸颊之吻_1.png",
-              "alt": "作品 12"
-            },
-            "user": "用户 12"
-          }
-        ],
-        "className": "bg-black"
+         "photo_items": [
+            { "title": "移除背景", "url": "/remove-background", "image": "/img_video/imgs/AI-Fake-Date_中国女友_1.png", "hover_image": "/img_video/imgs/AI-Fake-Date_中国女友_2.png" },
+            { "title": "AI 图像增强", "url": "/image-enhancer", "image": "/img_video/imgs/AI-Kissing_脸颊之吻_1.png", "hover_image": "/img_video/imgs/AI-Kissing_脸颊之吻_2.png" },
+            { "title": "照片转卡通", "url": "/photo-to-cartoon", "image": "/img_video/imgs/AI-Fake-Date_日本女友_1.png", "hover_image": "/img_video/imgs/AI-Fake-Date_日本女友_2.png" },
+            { "title": "换脸", "url": "/face-swap", "image": "/img_video/imgs/角色切换_审讯室_1.png", "hover_image": "/img_video/imgs/角色切换_审讯室_2.png" },
+            { "title": "物体移除", "url": "/object-remover", "image": "/img_video/imgs/Hug_拥抱_1.png", "hover_image": "/img_video/imgs/Hug_拥抱_2.png" }
+        ]
       },
-      "cta": {
-        "id": "cta",
-        "title": "准备好开始创作了吗?",
-        "description": "立即加入 1PhotoAI，释放您的创造力。",
-        "buttons": [
-          {
-            "title": "免费开始使用",
-            "url": "/login",
-            "target": "_self",
-            "icon": "Zap"
-          }
-        ],
-        "className": "bg-muted"
+      "stats": {
+        "block": "stats",
+        "id": "stats",
+        "title": "受到 150,000+ 用户的喜爱",
+        "items": [
+          { "quote": "起初我很怀疑，但 1PhotoAI 彻底震撼了我！", "user": "Sarah J.", "role": "内容创作者" },
+          { "quote": "我用过的最好的 AI 视频生成器。毫无疑问。", "user": "Mike T.", "role": "电影制作人" },
+          { "quote": "绝对喜欢这些照片特效。太逼真了！", "user": "Emily R.", "role": "设计师" }
+        ]
       },
       "faq": {
         "id": "faq",
