--- a/src/config/locale/messages/zh/landing.json
+++ b/src/config/locale/messages/zh/landing.json
@@ -249,6 +249,28 @@
     "show_locale": true,
     "topbanner": {
       "text": "🎉 欢迎来到 1photoai！今天就开始创作精美视觉内容吧。"
+    },
+    "hero": {
+      "title": "一站式 AI 图像与视频创作平台",
+      "description": "专业的精美视觉内容创作平台。将文本转化为图像、生成视频、创作 AI 艺术和头像。免费提供照片编辑、文生图和图生视频工具。",
+      "buttons": [
+        {
+          "title": "创作视频",
+          "url": "/text-to-video",
+          "icon": "Video",
+          "primary": false
+        },
+        {
+          "title": "创作图像",
+          "url": "/text-to-image",
+          "icon": "Image",
+          "primary": false
+        }
+      ],
+      "image": {
+        "src": "/hero.png",
+        "alt": "1photoai"
+      }
     }
   },
   "footer": {
