修复大部分问题，现在先提交，然后修改首页最底部页面和effects的下方的faq等问题即可

--- a/src/config/locale/messages/en/common.json
+++ b/src/config/locale/messages/en/common.json
@@ -52,5 +52,9 @@
   "locale_detector": {
     "title": "We detected your browser language is {locale}. Switch to it?",
     "switch_to": "Switch to {locale}"
+  },
+  "tool_preview_placeholder": {
+    "title": "Bring Images to Life",
+    "description": "Turn your static images into stunning videos with AI motion technology."
   }
 }
