--- a/src/config/locale/messages/en/pages/photo-effects.json
+++ b/src/config/locale/messages/en/pages/photo-effects.json
@@ -5,6 +5,7 @@
   },
   "page": {
     "title": "Viral AI Photo Effects",
+    "description": "Discover cinematic AI photo effects. Create AI hugs, pregnant AI photos, selfies with celebrities, and character rotations instantly.",
     "show_sections": [
       "effects",
       "cta",
