--- a/src/config/locale/messages/en/pages/video-effects.json
+++ b/src/config/locale/messages/en/pages/video-effects.json
@@ -5,6 +5,7 @@
   },
   "page": {
     "title": "Viral AI Video Effects",
+    "description": "Explore 100+ viral AI video effects. Transform your photos into AI kissing videos, add AI muscles, generate AI hugs, and more popular visual effects.",
     "show_sections": [
       "effects",
       "cta",
